crates/ls-server/tests/snapshots/pc_wire__completion.snap
---
source: crates/ls-server/tests/pc_wire.rs
expression: scrub(&completion)
---
{
  "isIncomplete": false,
  "items": [
    {
      "data": {
        "symbol": "fake/Symbol#"
      },
      "kind": 3,
      "label": "fakeItem@3:6"
    }
  ]
}
