crates/ls-server/tests/snapshots/pc_wire__hover.snap
---
source: crates/ls-server/tests/pc_wire.rs
expression: scrub(&hover)
---
{
  "contents": {
    "kind": "markdown",
    "value": "fake hover at 3:6"
  }
}
