crates/ls-server/tests/snapshots/pc_wire__semantic-tokens-full.snap
---
source: crates/ls-server/tests/pc_wire.rs
expression: scrub(&full)
---
{
  "data": [
    0,
    0,
    4,
    3,
    1,
    0,
    8,
    4,
    15,
    0,
    2,
    6,
    4,
    2,
    2
  ]
}
